# mesh

./: .gitignore  Pipfile  README.md
scripts/: curvature.py  driver.py  surface.py  test_surface.py
scripts/cgal/: CMakeLists.txt  cgalmesh.cxx
